# droidbuilder

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  droidbuilder.toml  main.py  pyproject.toml  sdl2-alooper.patch
.github/: funding.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: USAGE.md
droidbuilder/: !builder.py  .builder.py  builder.py  cli_logger.py  config.py  decorators.py  dependencies.py  downloader.py  installer.py  main.py  utils.py
droidbuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
droidbuilder/commands/: __init__.py  build.py  check_deps.py  clean.py  config.py  doctor.py  init.py  install_tools.py  list_droids.py  list_files.py  list_templates.py  list_tools.py  log.py  search.py  search_code.py  search_dependency.py  search_droid.py  search_packages.py  uninstall.py  update.py  update_deps.py  version.py
droidbuilder/utils/: __init__.py  buildtime_package.py  command_executor.py  configure_resolver.py  (+7 more)
tests/: test_accept_sdk_licenses.py  test_build_android.py  test_builder.py  test_check_deps.py  test_clean.py  test_config.py  test_dependencies.py  test_download_and_extract.py  test_downloader.py  test_file_manager.py  test_init.py  test_install_cmdline_tools.py  test_install_jdk.py  test_install_ndk.py  test_install_python_requirements.py  test_install_sdk_packages.py  test_installer.py  test_installer_helpers.py  test_jdk_helpers.py  test_list_templates.py  test_main.py  test_python_package.py  test_search.py  test_search_packages.py  test_setup_tools.py  test_system_package.py  test_uninstall.py
(+2 files in other folders)
