[project]
name = "droidbuilder"
version = "0.1.0"
description = "A user-friendly, cross-platform command-line tool for building applications."
authors = [{ name = "kmedya", email = "koustavamedya.2000@gmail.com" }]
dependencies = [
    "click",
    "toml",
    "requests",
    "python-for-android @ git+https://github.com/kmedya-dev/python-for-android.git@main",
]
[project.scripts]
droidbuilder = "droidbuilder.main:cli"
